new clustering logic takes elapsed time of next cluster versus last cluster in the queue